syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";

option go_package = "nftledger/internal/adapter/inbound/grpc/generated/model";
option optimize_for = SPEED;

message Request {
    uint64 id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    google.protobuf.Timestamp deleted_at = 5;
}