syntax = "proto3";

package service;

option go_package = "nftledger/internal/adapter/inbound/grpc/generated/service";
option optimize_for = SPEED;

import "model/request.proto"; 

service RequestService {
    rpc SaveRequest(model.SaveRequestRequest) returns (model.SaveRequestResponse);
    rpc GetRequest(model.GetRequestRequest) returns (model.GetRequestResponse);
    rpc GetRequests(model.GetRequestsRequest) returns (model.GetRequestsResponse);
    rpc UpdateRequest(model.UpdateRequestRequest) returns (model.UpdateRequestResponse);
    rpc DeleteRequest(model.DeleteRequestRequest) returns (model.DeleteRequestResponse);
}


